css overflow fix

--- a/flightbook.css
+++ b/flightbook.css
@@ -1,6 +1,6 @@
 #flightbook-table {
     width: 100%;
-    max-height: 50%;
+    max-height: 47%;
     position: fixed;
     top: 13%;
     right: 0px;
